fixed spacing between gallery images

--- a/styles/main.css
+++ b/styles/main.css
@@ -79,7 +79,7 @@ div.gallery {
   margin: 5px;
   float: left;
   width: 180px;
-  padding: 30px;
+  padding: 54px;
 }
 
 div.gallery:hover img {
